Fixing text wrappign

--- a/dplace_app/static/css/dplace.css
+++ b/dplace_app/static/css/dplace.css
@@ -474,6 +474,10 @@ label.light {
     border-radius:5px;
 }
 
+.criteria-list li {
+    white-space: nowrap;
+}
+
 .hidden {
     display:none;
 }
